--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "engines": {
     "node": ">= 0.6.0"
   },
+  "bin": {
+    "{app}": "bin/{app}"
+  },
   "dependencies": {
     "q": "*",
     "coa": "*"
