--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "{app}",
+  "name": "app",
   "version": "0.0.0",
   "homepage": "http://github.com/arikon/tpl-cli",
   "author": "Sergey Belov <peimei@ya.ru> (http://github.com/arikon)",
