Push coverage info to coveralls.io on `make coverage`

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "istanbul": "*",
     "mocha-as-promised": "*",
     "mocha-istanbul": "*",
-    "mocha": "*"
+    "mocha": "*",
+    "coveralls": "*"
   },
   "optionalDependencies": {},
   "scripts": {
