--- a/bin/app.in
+++ b/bin/app.in
@@ -1,3 +1,15 @@
 #!/usr/bin/env node
 
+'use strict';
+
+var updateNotifier = require('update-notifier'),
+    notifier = updateNotifier({ packagePath: '../package.json' });
+
+if (notifier.update) {
+    notifier.notify();
+}
+
+// Do not limit stack trace
+Error.stackTraceLimit = Infinity;
+
 require('../lib/coa').run();
